--- a/scss/components/modal/_modal.scss
+++ b/scss/components/modal/_modal.scss
@@ -10,11 +10,6 @@
 
 	&-header {
 		border-bottom: length(0);
-		// padding: length(32);
-
-		// @include breakpoint(phone575) {
-		//     padding: length(16);
-		// }
 
 		.modal-title {
 			color: $headingtext;
@@ -36,7 +31,153 @@
 		}
 	}
 
-	&-body {}
+	&-body {
+		.categoryinfo {
+			@include flex-column;
+			gap: length(16);
+        
+			.inputbox {
+				@include w100;
+				@include flex-column;
+				gap: length(8);
+				position: relative;
+
+				.inputlabel {
+					color: $textdark;
+					@include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+
+					.required {
+						color: $danger;
+					}
+				}
+				
+				.inputfield {
+					color: $textprimary;
+					@include border(solid, 1, $textlight);
+					@include radius(4);
+					padding: length(8) length(16);
+					@include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+					@include transitionsall;
+
+					&::after {
+						color: $textlight;
+					}
+
+					&:focus {
+						border-color: $secondarytext;
+					}
+				}
+
+				.selectfield {
+					color: $textprimary;
+					@include border(solid, 1, $textlight);
+					@include radius(4);
+					@include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+					padding: length(8) length(16);
+					background: $white url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 10L12 14L8 10' stroke='%238A92A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A") no-repeat center right 3%;
+					appearance: none;
+					cursor: pointer;
+					@include transitionsall;
+
+					option {
+						color: $textprimary;
+					}
+
+					&:focus {
+						border-color: $secondarytext;
+					}
+				}
+
+				.btn-remove {
+					position: absolute;
+					top: 72%;
+					@include transform(translateY(-50%));
+					right: length(40);
+					@include transparent-button;
+					z-index: 100;
+				}
+
+				.error-message {
+					display: none;
+					color: $danger;
+					@include font-face($primaryFont, style('normal'), size(12), weight('medium'), line-height(16.8, 12));
+				}
+
+				&.errorfield {
+					.inputfield,
+					.selectfield {
+						border-color: $danger;
+					}
+
+					.btn-remove {
+						top: 50%;
+					}
+
+					.error-message {
+						display: block;
+					}
+				}
+			}
+
+			.uploadbox {
+				@include flex-column;
+				gap: length(8);
+
+				.labelupload {
+					color: $textdark;
+					@include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+  
+					.required {
+						color: $danger;
+					}
+				}
+
+				.upload {
+					background: $productbg;
+					@include radius(4);
+					@include flex-center-column;
+					gap: length(12);
+					padding: length(10);
+					@include border(dashed, 2, $productborder);
+					@include h100;
+					text-align: center;
+					overflow: hidden;
+					min-height: length(160);
+	
+					.icon {
+						@include square(length(44));
+						@include flex-center;
+						overflow: hidden;
+	
+						svg {
+							@include wh100;
+						}
+					}
+	
+					.uploadinfo {
+						.uploadlabel {
+							color: $textdark;
+							@include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+							cursor: pointer;
+	
+							.text {
+								color: $primary;
+							}
+						}
+					}
+	
+					&.errorfield {
+						border-color: $danger;
+					}
+				}
+			}
+
+			.submitbox {
+				@include flex-end;
+				margin-top: length(24);
+			}
+		}
+	}
 }
 
 /**=======================================================**
