--- a/scss/components/offcanvas/_offcanvas.scss
+++ b/scss/components/offcanvas/_offcanvas.scss
@@ -80,9 +80,10 @@
 
 		.mobilemenu {
 			@include flex-column;
+			padding-bottom: length(32);
 
 			.menulink {
-				padding: length(10) length(12);
+				padding: length(8) length(12);
 				@include flex-center-vert;
 				gap: length(8);
 				position: relative;
@@ -177,7 +178,7 @@
 				padding-bottom: length(48);
 
 				&-item {
-					padding: length(10) length(12);
+					padding: length(8) length(12);
 					position: relative;
 
 					&::before {
