--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -697,6 +697,11 @@ input[type="date"]:valid::before {
   display: none;
 }
 
+button {
+  background: transparent;
+  border: none;
+}
+
 /**=======================================================**
                         ACCORDION START
 **=======================================================**/
@@ -5235,6 +5240,9 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   gap: 1rem;
 }
 
@@ -5392,6 +5400,96 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   transition: all 250ms ease-in-out;
 }
 
+.variant-create .infobox .inputbox .tagswrapper {
+  border: solid 0.0625rem #d1d4dc;
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 0.25rem;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+}
+
+.variant-create .infobox .inputbox .tagswrapper .tag {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 0.25rem;
+  border-radius: 0.3125rem;
+  border-radius: 0.3125rem;
+  background: #232d43;
+  color: white;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.75rem;
+  font-weight: normal;
+  line-height: 1.33333;
+  padding: 0.1875rem 0.375rem;
+}
+
+.variant-create .infobox .inputbox .tagswrapper .tag button {
+  background: transparent;
+  border: none;
+  height: 0.75rem;
+  width: 0.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: inherit;
+}
+
+.variant-create .infobox .inputbox .tagswrapper input {
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.75rem;
+  font-weight: normal;
+  line-height: 1.33333;
+}
+
+.variant-create .infobox .inputbox .tagswrapper input::-webkit-input-placeholder {
+  color: #d1d4dc;
+}
+
+.variant-create .infobox .inputbox .tagswrapper input:-ms-input-placeholder {
+  color: #d1d4dc;
+}
+
+.variant-create .infobox .inputbox .tagswrapper input::-ms-input-placeholder {
+  color: #d1d4dc;
+}
+
+.variant-create .infobox .inputbox .tagswrapper input::placeholder {
+  color: #d1d4dc;
+}
+
+.variant-create .infobox .inputbox .tagswrapper input:not([disabled]):hover {
+  cursor: text;
+}
+
+.variant-create .infobox .inputbox .tagswrapper:focus-within {
+  border-color: #8b93a7;
+}
+
 .variant-create .infobox .inputbox .error-message {
   display: none;
   color: #fc5a5a;
@@ -5419,6 +5517,10 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   display: block;
 }
 
+.variant-create .infobox .inputbox.errorfield .tagswrapper {
+  border-color: #fc5a5a;
+}
+
 .variant-create .infobox .closebox {
   height: 1.75rem;
   width: 1.75rem;
@@ -5431,8 +5533,7 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  overflow: hidden;
 }
 
 .variant-create .infobox .closebox .btn-remove {
@@ -5441,7 +5542,11 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   height: 100%;
   background: transparent;
   border: none;
-  margin-top: -0.375rem;
+}
+
+.variant-create .infobox .closebox .btn-remove svg {
+  width: 100%;
+  height: 100%;
 }
 
 .variant-create .submitvariant {
