--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -17,6 +17,8 @@ $danger: hsl(0, 96%, 67%); //#FC5A5A
 $textdark: hsl(0, 0%, 20%); //#333333
 $categorytext: hsl(34, 100%, 50%); //#FF9100
 $varianttext: hsl(175, 98%, 24%); //#01796F
+$tertiarytext: hsl(40, 97%, 54%); //#FCAF15
+$textblue: hsl(205, 100%, 50%); //#0094FF
 
 /**=====================================================**
                     BACKGROUND-COLORS
