--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -19,6 +19,7 @@ $categorytext: hsl(34, 100%, 50%); //#FF9100
 $varianttext: hsl(175, 98%, 24%); //#01796F
 $tertiarytext: hsl(40, 97%, 54%); //#FCAF15
 $textblue: hsl(205, 100%, 50%); //#0094FF
+$formtitle: hsl(224, 9%, 46%); //#6A7080
 
 /**=====================================================**
                     BACKGROUND-COLORS
