--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4330,6 +4330,143 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   transition: all 250ms ease-in-out;
 }
 
+/**=====================================================
+                        FORM START
+=====================================================**/
+.inputbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.5rem;
+  position: relative;
+}
+
+.inputbox .inputlabel {
+  color: #8b93a7;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.42857;
+}
+
+.inputbox .inputfield {
+  padding: 0.625rem 2rem 0.625rem 1rem;
+  border: solid 0.0625rem #d1d4dc;
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  color: black;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.42857;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+}
+
+.inputbox .inputfield:focus {
+  border-color: #8b93a7;
+}
+
+.inputbox .erroricon {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-40%);
+  transform: translateY(-40%);
+  right: 0.625rem;
+  opacity: 0;
+  visibility: none;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+}
+
+.inputbox .iconinput {
+  border: solid 0.0625rem #d1d4dc;
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+}
+
+.inputbox .iconinput .icon {
+  width: 2.5rem;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.inputbox .iconinput .inputfield {
+  width: calc(100% - 2.5rem);
+  padding: 0.625rem 2rem 0.625rem 0rem;
+  border: 0;
+  color: black;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.42857;
+}
+
+.inputbox .iconinput:focus-within {
+  border-color: #8b93a7;
+}
+
+.inputbox .errormessage {
+  display: none;
+  color: #fc5a5a;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.75rem;
+  font-weight: 500;
+  line-height: 1.33333;
+}
+
+.inputbox.errorfield .inputfield {
+  border-color: #fc5a5a;
+}
+
+.inputbox.errorfield .errormessage {
+  display: block;
+}
+
+.inputbox.errorfield .select-dropdown .selected-item {
+  border-color: #fc5a5a;
+}
+
+.inputbox.errorfield .select-dropdown .toggleicon {
+  display: none;
+}
+
+.inputbox.errorfield .erroricon {
+  opacity: 1;
+  visibility: visible;
+}
+
+.inputbox.errorfield .iconinput {
+  border-color: #fc5a5a;
+}
+
+/**=====================================================
+                        FORM END
+=====================================================**/
 /**=======================================================**
                         ERROR START
 **=======================================================**/
@@ -5828,4 +5965,214 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
 
 /**=======================================================**
                         VARIANT END
+**=======================================================**/
+/**=======================================================**
+                          FORMS START
+**=======================================================**/
+.forms {
+  background: white;
+  padding: 0.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.5rem;
+}
+
+@media screen and (min-width: 62rem) {
+  .forms {
+    padding: 0.75rem 1.25rem;
+    gap: 3rem;
+  }
+}
+
+.forms .formbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.5rem;
+}
+
+.forms .formbox-header .formtitle {
+  color: #333333;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 1.75;
+}
+
+.forms .formbox-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1rem;
+}
+
+@media screen and (min-width: 62rem) {
+  .forms .formbox-body {
+    gap: 1.5rem;
+  }
+}
+
+.forms .formbox-body .submit-buttons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.select-dropdown {
+  display: inline-block;
+  position: relative;
+  background: white;
+  width: 100%;
+}
+
+.select-dropdown * {
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+}
+
+.select-dropdown.is-active .selected-item,
+.select-dropdown.is-active ul {
+  border-color: #8b93a7;
+}
+
+.select-dropdown.is-active input[type="text"] {
+  border-color: #d1d4dc;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.select-dropdown.is-active .toggleicon {
+  -webkit-transform: rotate(180deg) translateY(50%);
+  transform: rotate(180deg) translateY(50%);
+}
+
+.select-dropdown.is-active ul {
+  display: block;
+}
+
+.select-dropdown.is-active .selected-item {
+  border-bottom-left-radius: 0rem;
+  border-bottom-right-radius: 0rem;
+}
+
+.select-dropdown .selected-item {
+  position: relative;
+  z-index: 1;
+  text-overflow: ellipsis;
+  background: transparent;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1rem;
+  padding: 0.625rem 1rem;
+  border: solid 0.0625rem #d1d4dc;
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  color: black;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.42857;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+}
+
+.select-dropdown .toggleicon {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  right: 1rem;
+}
+
+.select-dropdown ul {
+  display: none;
+  position: absolute;
+  z-index: 999;
+  background: white;
+  width: 100%;
+  list-style-type: none;
+  border: solid 0.0625rem #d1d4dc;
+  border-top: 0;
+  border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+  padding: 0;
+  margin: 0;
+  max-height: 22.5rem;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+}
+
+.select-dropdown ul::-webkit-scrollbar {
+  background: transparent;
+  width: 0.375rem;
+}
+
+.select-dropdown ul::-webkit-scrollbar-thumb {
+  border-radius: 0.5rem;
+  border-radius: 0.5rem;
+  background: #d1d4dc;
+}
+
+.select-dropdown ul li {
+  background: white;
+  padding: 0.75rem 1rem;
+  cursor: pointer;
+  -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  border-bottom: solid 0.0625rem #d1d4dc;
+  color: black;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.42857;
+}
+
+.select-dropdown ul li:not([disabled]):hover {
+  background: #f3f4f6;
+}
+
+.select-dropdown ul li * {
+  pointer-events: none;
+}
+
+.select-dropdown ul li:last-child {
+  border-bottom: 0;
+}
+
+/**=======================================================**
+                          FORMS END
 **=======================================================**/
